--- a/port.css
+++ b/port.css
@@ -14,9 +14,45 @@ body{
 header{
    
     background-color: #FFF8F3;
+    padding-top: 50px;
 }
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+nav{
+    width: 71%;
+    max-width: 1140px;
+    /* border: 1px solid red; */
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+}
+nav ul{
+    display: flex;
+    gap: 51px;
+    list-style-type: none;
+    font-size: 20px;
+    color: #474747;
+    align-items: center;
+}
+.Blog h2{
+    font-size: 45px;
+}
+
+.orange{
+    color: #FD6E0A
+}
+
+.bts{
+    background-color: #FD6E0A;
+    color: #FFF8F3;
+    padding: 18px 35px 19px;
+    border-radius: 5px;
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
+    
 }
