--- a/port.css
+++ b/port.css
@@ -8,19 +8,25 @@
 
 }
 
-body{
-    /* background-color: aquamarine; */
-}
+
 header{
    
-    background-color: #FFF8F3;
+    /* background-color: #FFF8F3; */
+    background: url("./images/developer.png"), url("./images/header_bg.png"), #FFF8F3;
+    background-position: top left, bottom right;
+    background-repeat: no-repeat;
     padding-top: 50px;
+    
 }
+
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
+
 nav{
     width: 71%;
     max-width: 1140px;
@@ -37,7 +43,9 @@ nav ul{
     font-size: 20px;
     color: #474747;
     align-items: center;
+    cursor: pointer;
 }
+
 .Blog h2{
     font-size: 45px;
 }
@@ -45,6 +53,7 @@ nav ul{
 .orange{
     color: #FD6E0A
 }
+
 
 .bts{
     background-color: #FD6E0A;
@@ -54,5 +63,59 @@ nav ul{
     border: none;
     font-size: 20px;
     font-weight: bold;
+    cursor: pointer;
     
+}
+
+#Bannar{
+    /* border: 1px solid red; */
+    margin: 46px 38px 0px 230px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+   
+
+}
+
+.banner-content h2{
+    color: #474747;
+    font-weight: 600;
+    margin-bottom: 5px;
+    font-size: 45px;
+
+}
+
+.banner-content h1{
+    color: black;
+    font-weight: bold;
+    margin-bottom: 20px;
+    font-size: 85px;
+}
+.banner-content p{
+    margin-bottom: 30px;
+    color: #757575;
+    font-size: 18px;
+    line-height: 30px;
+}
+
+.banner-content #Contact{
+    
+    color: #FD6E0A;
+    padding: 18px 35px 19px;
+    margin-left: 30px;
+    border-radius: 5px;
+    /* border: 1px #FD6E0A; */
+    font-size: 20px;
+    font-weight: bold;
+    border-color: #FD6E0A;
+    cursor: pointer;
+}
+#Banner .banner-content{
+     max-width: 585px;
+    max-height: 262px
+}
+#banner .image img{
+    max-width: 586px;
+    max-height: 676px;
+    vertical-align: middle;
 }
