--- a/port.css
+++ b/port.css
@@ -131,6 +131,10 @@ nav ul{
     background-color: #FFF8F3;
     padding: 131px 156px;
  }
+/* .heading{
+    max-width: 827px;
+    text-align: center;
+    margin: 0 auto; */
 
 
  .heading h1{
@@ -164,4 +168,77 @@ nav ul{
     font-weight: bold;
     font-size: 20px;
    
+}
+.skills-container{
+
+    padding-top: 130px;
+
+}
+
+#Skills{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    /* text-align: center; */
+
+
+}
+
+.descriptions{
+    max-width: 827px;
+    max-height: 168px;
+    justify-content: center;
+    margin: 0 auto;
+
+}
+
+.descriptions h1{
+
+    font-size: 35px;
+    font-weight: bold;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+.descriptions p{
+    line-height: 30px;
+    font-size: 18px;
+    color: #757575;
+    margin-bottom: 50px;
+    text-align: center;
+
+}
+
+.about-skills{
+    display: flex;
+    /* box-shadow: 5px; */
+    gap: 24px;
+    
+
+}
+.about-skills .skills-logo{
+    /* border: 1px solid red; */
+    padding: 30px;
+    /* border: 1px solid red; */
+    border-radius:5px; 
+    box-shadow: 5px;
+    /* height: 267px; */
+    /* width: 377px; */
+    box-shadow: 0px 6px 50px 0px #0000001e;
+}
+
+.about-skills .skills-logo img{
+    padding-bottom: 30px;
+    max-width: 44px;
+}
+.about-skills .skills-logo h4{
+    padding-bottom: 20px;
+    font-size: 20px;
+    font-weight: bold;
+}
+.about-skills .skills-logo p{
+    line-height: 28px;
+    color: #757575;
+    font-size: 16px;
+
 }
