--- a/port.css
+++ b/port.css
@@ -13,7 +13,7 @@ header{
    
     /* background-color: #FFF8F3; */
     background: url("./images/developer.png"), url("./images/header_bg.png"), #FFF8F3;
-    background-position: top left, bottom right;
+    background-position: 23px 38px, bottom right;
     background-repeat: no-repeat;
     padding-top: 50px;
     
@@ -309,26 +309,40 @@ nav ul{
     
 }
 
-#ending{
-    width: 71%;
+footer{
+   
+    margin-top: 113px;
     background-color: #FFF8F3;
-    max-width: 1600px;
-    max-height: 780px;
-    
+    padding: 130px 0;
 }
 
-#ending .Last{
+footer .foot-cont{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
     display: flex;
     gap: 117px;
-    margin-left: 230px;
 }
-.right-side p{
-    font-size: 16px;
-    color: #474747;
-    line-height: 28px;
-}
-.right-side .left-side h1{
+.foot-cont h2{
     font-size: 35px;
     font-weight: bold;
+    margin-bottom: 20px;
+}
+.footer-container p{
+    font-size: 16px;
+    color: #474747;
+    max-width: 562px;
+    margin-bottom: 30px;
 
+}
+.footer-container a {
+    margin-right: 24px;
+}
+
+.foot-cont form input[type="text"],  .foot-cont form textarea{
+    width: 461px;
+    padding: 30px;
+    margin-bottom: 24px;
+    border: none;
+    border-radius: 5px;
 }
